--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,8 +4,11 @@
   <div class="section">
   <% @products.each do |product| %>
     <div class="col s4">
-      <h4><%= product.name %></h4>
-      <p><%= product.description %></p>
+      <h4><%= link_to product.name, product_path(product), id: "#{product.id}", remote: true %></h4>
+      <div id="product_description_<%= product.id %>">
+      </div>
+      <div id="product_image_<%= product.id %>">
+      </div>
       <p><%= number_to_currency product.price %></p>
       <%= form_for @order_item do |f| %>
         <%= f.hidden_field :product_id, value: product.id %>
