add AJAX functionality to allow user to click on product to reveal image link to product

--- a/app/views/products/show.js.erb
+++ b/app/views/products/show.js.erb
@@ -1,1 +1,2 @@
 $('#product_description_<%= @product.id %>').html("<p><%= @product.description %></p>").toggle();
+$('#product_image_<%= @product.id %>').html("<p><%= @product.image %></p>").toggle();
