add links for admin only to edit and delete product with AJAX functionality, add ability to update product, troubleshoot ability to delete

--- a/app/views/products/show.js.erb
+++ b/app/views/products/show.js.erb
@@ -1,2 +1,3 @@
 $('#product_description_<%= @product.id %>').html("<p><%= @product.description %></p>").toggle();
 $('#product_image_<%= @product.id %>').html("<p><%= @product.image %></p>").toggle();
+$('#edit_product_<%= @product.id %>').html('<%= j render("edit_buttons") %>')
