--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,7 +9,10 @@
       </div>
       <div id="product_image_<%= product.id %>">
       </div>
+      <div id="edit_product_<%= product.id %>">
+      </div>
       <p><%= number_to_currency product.price %></p>
+
       <%= form_for @order_item do |f| %>
         <%= f.hidden_field :product_id, value: product.id %>
         <%= f.number_field :quantity, min: 1 %>
