--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><%= render 'layouts/cart' %></li>
         <li><%= link_to "See all products", products_path %></li>
+        <% if current_user && current_user.admin %>
+        <li><%= link_to "Add New Product", new_product_path %></li>
+        <% end %>
         <% if current_user %>
           <li><%= current_user.email %></li>
           <li><%= link_to "Sign out", '/sign_out' %></li>
