--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,7 +4,7 @@
 
   Name: <%= f.text_field :name %>
   Email: <%= f.text_field :email %>
-  Password: <%= f.password_field :password  %>
+  Password (Please choose a password between 6 and 40 characters.): <%= f.password_field :password  %>
   Password Confirmation: <%= f.password_field :password_confirmation %>
   <span class="waves-effect waves-light btn"><%= f.submit "Sign up" %></span>
 <% end %>
